--- a/src/jquery-image-map-editor.css
+++ b/src/jquery-image-map-editor.css
@@ -24,3 +24,11 @@
     opacity: 0.6;
     cursor: pointer;
 }
+
+.image-map-editor-svg__shape {
+    fill: rgb(255, 255, 255);
+    stroke: rgb(51, 51, 51);
+    stroke-width: 1;
+    opacity: 0.6;
+    cursor: pointer;
+}
